# networks_fenicsx

./: .gitignore  CITATION.cff  README.md  _config.yml  _toc.yml  index.md  pyproject.toml
.github/workflows/: build_docs.yml  check_formatting.yml  deploy.yml  pypi.yml  test_package.yml
demos/: demo_Y_bifurcation.py  demo_arterial_tree.py  demo_bookchapter.py  demo_double_Y_bifurcation.py  demo_honeycomb.py  demo_perf.py  demo_tree.py  demo_truss.py  test_demos.py
docs/: _config.yml
notebooks/: networkX_graphs.ipynb  performace_plots-jump_vectors.ipynb  performace_plots-lm_spaces.ipynb
src/networks_fenicsx/: __init__.py  assembly.py  config.py  mesh.py  network_generation.py  post_processing.py  solver.py  timers.py
src/networks_fenicsx/mesh/: __init__.py  arterial_tree.py  mesh.py  mesh_generation.py  network_generation.py
src/networks_fenicsx/solver/: assembly.py  solver.py
src/networks_fenicsx/utils/: post_processing.py  timers.py
tests/: test_Y_bifurcation.py  test_edge_info.py  test_make_tree.py  test_orientation.py
