[build-system] # Require setuptool version due to https://github.com/pypa/setuptools/issues/2938
requires = ["setuptools>=61.0.0", "wheel"]

[project]
name = "networks_fenicsx"
version = "0.2.0.dev0"
description = "Solving Stokes on 1D networks with FEniCSx"
authors = [
    { name = "Jørgen S. Dokken", email = "dokken@simula.no" },
    { name = "Cécile Daversin-Catty", email = "cecile@simula.no" },
]
license = { file = "LICENSE" }
readme = "README.md"
dependencies = ["fenics-dolfinx>=0.10.0", "networkx"]

[project.optional-dependencies]
test = ["pytest"]
linting = ["mypy", "flake8"]
docs = ["jupyter-book<2.0.0", "jupytext", "sphinx-codeautolink"]
all = [
    "networks_fenicsx[test]",
    "networks_fenicsx[linting]",
    "networks_fenicsx[docs]",
]


[tool.pytest.ini_options]
addopts = ["--import-mode=importlib"]

# testpaths = [
#     "tests"
# ]

[tool.mypy]
ignore_missing_imports = true
# Folders to exclude
exclude = ["docs/build/", "build/"]
# Folder to check with mypy
files = ["src"]

[tool.ruff]

# Exclude a variety of commonly ignored directories.
exclude = [
    "examples",
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]

# Same as Black.
line-length = 100

# Assume Python 3.10.
target-version = "py310"

[tool.ruff.lint]
# Enable pycodestyle (`E`) and Pyflakes (`F`) codes by default.
select = ["E", "F", "I", "ICN"]
ignore = ["E402", "E741", "E743", "E731"]

# Allow autofix for all enabled rules (when `--fix`) is provided.
fixable = ["A", "B", "C", "D", "E", "F", "I"]
unfixable = []

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.lint.flake8-import-conventions]
banned-from = ["networkx", "numpy", "numpy.typing"]

[tool.ruff.lint.flake8-import-conventions.extend-aliases]
"networkx" = "nx"
"numpy" = "np"
"numpy.typing" = "npt"

[tool.ruff.lint.mccabe]
# Unlike Flake8, default to a complexity level of 10.
max-complexity = 10


[tool.ruff.lint.pydocstyle]
convention = "google"


[tool.ruff.lint.isort]
known-first-party = ["networks_fenicsx", "basix", "dolfinx", "ffcx", "ufl"]
known-third-party = ["gmsh", "numpy", "pytest"]
section-order = [
    "future",
    "standard-library",
    "mpi",
    "third-party",
    "first-party",
    "local-folder",
]
[tool.ruff.lint.isort.sections]
"mpi" = ["mpi4py", "petsc4py"]
